--- a/pentevo/unreal/Unreal/doc/todo.txt
+++ b/pentevo/unreal/Unreal/doc/todo.txt
@@ -4,38 +4,25 @@ Tests:
 - check all places where cpu.t or cpu->t used
 
 Bugs:
-- TR-DOS doesn't work with 'No Delays' option
-- Bugs with legacy procedures using conf.bordersize
-- bug in DEMO001 when pressing Enter (similar to that on H/W but much more often)
-- Border bug in BallDreams-2 when NumLock is ON (WTF?)
-- Incorrect exit from DEBUG with multiple INTs
+- TR-DOS doesn't work with 'No Delays' option in 14MHz
+- Border bug in BallDreams-2
+- Incorrect exit from DEBUG in Bomber (paging?)
+- NGS (memory?) bug in WC mp3 player
 - Incorrect DOS on/off behaviour with regard to RAM at #0000 (MEMCONFIG)
 
 Missing features:
-- line-delayed ports:
-		TSConfig
-		T0XOffsL
-		T0XOffsH
-		T0YOffsL
-		T0YOffsH
-		T1XOffsL
-		T1XOffsH
-		T1YOffsL
-		T1YOffsH
 		TMPage
 		T0GPage
 		T1GPage
 		SGPage
-- legacy renderers
-- other clones videomodes
+- other clones full compatibility
 - leds
-- NoFlic
+- NoFlic (partially)
 - TS Engine
 - Turbo for Baseconf
 - VDOS
 
 To Do:
-- Re-factor multiplier to the cputact macro
 - Save settings to .ini
 
 X-factors:
