TSconf: updated SIM-model

--- a/pentevo/fpga/current/sim_top/README
+++ b/pentevo/fpga/current/sim_top/README
@@ -10,5 +10,5 @@
 пути фиксинга: перевести схему на генерацию стробов zpos и zneg, в момент которых клок на Z80, соотв-но,
 переходит в 1 или в 0: для кмопов - по negedge fclk, для нмопов - по началу этих стробов (RS-триггер).
 
-другой путь - в zmem.v не лочить производные от сигналов Z80 по c2, только по c3.
+другой путь - в zmem.v не лочить производные от сигналов Z80 по pre_cend, только по cend.
 
